Compiladores/Trabalho Final/Compiladores-main/LangC/Grammar/LangCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/Users/marciohenrique/Downloads/uenp/TF_Compiladores-main/LangC.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


  namespace LangC.Grammar;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class LangCParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, DEFINE=2, INCLUDE=3, MAIN=4, DO=5, WHILE=6, FOR=7, RETURN=8, IMPORT=9, 
		STRUCT=10, UNION=11, TYPEOF=12, IF=13, ELSE=14, SWITCH=15, CASE=16, BREAK=17, 
		DEFAULT=18, EOL=19, PRINTF=20, SCANF=21, SCANF_FORMAT=22, AMPERSAND=23, 
		GETS=24, PUTS=25, INTEGER=26, DOUBLE=27, BOOLEAN=28, STRING=29, VOID=30, 
		SUM=31, SUB=32, DIV=33, MULT=34, MOD=35, ASSIGN=36, SEP=37, LP=38, RP=39, 
		LB=40, RB=41, LE=42, LT=43, GT=44, GE=45, EQ=46, NE=47, AND=48, OR=49, 
		NOT=50, NUMD=51, BOOL=52, NUM=53, VAR=54, STR=55, COMMENT=56, COMMENT_BLOCK=57, 
		WS=58;
	public const int
		RULE_prog = 0, RULE_preprocessor = 1, RULE_mainFunction = 2, RULE_function = 3, 
		RULE_line = 4, RULE_atrib = 5, RULE_input = 6, RULE_output = 7, RULE_expr = 8, 
		RULE_term = 9, RULE_factor = 10, RULE_controlflow = 11, RULE_loop = 12, 
		RULE_block = 13, RULE_rblock = 14, RULE_rbody = 15, RULE_bexpr = 16, RULE_params = 17, 
		RULE_paramsCall = 18, RULE_callFunction = 19;
	public static readonly string[] ruleNames = {
		"prog", "preprocessor", "mainFunction", "function", "line", "atrib", "input", 
		"output", "expr", "term", "factor", "controlflow", "loop", "block", "rblock", 
		"rbody", "bexpr", "params", "paramsCall", "callFunction"
	};

	private static readonly string[] _LiteralNames = {
		null, "'<stdio.h>'", "'#define'", "'#include'", "'main'", "'do'", "'while'", 
		"'for'", "'return'", "'#import'", "'struct'", "'union'", "'typeof'", "'if'", 
		"'else'", "'switch'", "'case'", "'break'", "'default'", "';'", "'printf'", 
		"'scanf'", null, "'&'", "'gets'", "'puts'", "'int'", "'double'", "'bool'", 
		"'str'", "'void'", "'+'", "'-'", "'/'", "'*'", "'%'", "'='", "','", "'('", 
		"')'", "'{'", "'}'", "'<='", "'<'", "'>'", "'>='", "'=='", "'!='", "'&&'", 
		"'||'", "'!'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "DEFINE", "INCLUDE", "MAIN", "DO", "WHILE", "FOR", "RETURN", 
		"IMPORT", "STRUCT", "UNION", "TYPEOF", "IF", "ELSE", "SWITCH", "CASE", 
		"BREAK", "DEFAULT", "EOL", "PRINTF", "SCANF", "SCANF_FORMAT", "AMPERSAND", 
		"GETS", "PUTS", "INTEGER", "DOUBLE", "BOOLEAN", "STRING", "VOID", "SUM", 
		"SUB", "DIV", "MULT", "MOD", "ASSIGN", "SEP", "LP", "RP", "LB", "RB", 
		"LE", "LT", "GT", "GE", "EQ", "NE", "AND", "OR", "NOT", "NUMD", "BOOL", 
		"NUM", "VAR", "STR", "COMMENT", "COMMENT_BLOCK", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LangC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LangCParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LangCParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LangCParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE() { return GetToken(LangCParser.INCLUDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MainFunctionContext mainFunction() {
			return GetRuleContext<MainFunctionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorContext[] preprocessor() {
			return GetRuleContexts<PreprocessorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorContext preprocessor(int i) {
			return GetRuleContext<PreprocessorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			Match(INCLUDE);
			State = 41;
			Match(T__0);
			State = 45;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DEFINE || _la==INCLUDE) {
				{
				{
				State = 42;
				preprocessor();
				}
				}
				State = 47;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 51;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 48;
					function();
					}
					} 
				}
				State = 53;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 54;
			mainFunction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreprocessorContext : ParserRuleContext {
		public PreprocessorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessor; } }
	 
		public PreprocessorContext() { }
		public virtual void CopyFrom(PreprocessorContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DefineDirectiveContext : PreprocessorContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(LangCParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(LangCParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public DefineDirectiveContext(PreprocessorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterDefineDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitDefineDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefineDirective(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncludeDirectiveContext : PreprocessorContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE() { return GetToken(LangCParser.INCLUDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT() { return GetToken(LangCParser.LT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(LangCParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(LangCParser.GT, 0); }
		public IncludeDirectiveContext(PreprocessorContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterIncludeDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitIncludeDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncludeDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprocessorContext preprocessor() {
		PreprocessorContext _localctx = new PreprocessorContext(Context, State);
		EnterRule(_localctx, 2, RULE_preprocessor);
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INCLUDE:
				_localctx = new IncludeDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 56;
				Match(INCLUDE);
				State = 57;
				Match(LT);
				State = 58;
				Match(VAR);
				State = 59;
				Match(GT);
				}
				break;
			case DEFINE:
				_localctx = new DefineDirectiveContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				Match(DEFINE);
				State = 61;
				Match(VAR);
				State = 62;
				expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MainFunctionContext : ParserRuleContext {
		public MainFunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainFunction; } }
	 
		public MainFunctionContext() { }
		public virtual void CopyFrom(MainFunctionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MainFunctionBlockContext : MainFunctionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(LangCParser.INTEGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MAIN() { return GetToken(LangCParser.MAIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LP() { return GetToken(LangCParser.LP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RP() { return GetToken(LangCParser.RP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RblockContext rblock() {
			return GetRuleContext<RblockContext>(0);
		}
		public MainFunctionBlockContext(MainFunctionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterMainFunctionBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitMainFunctionBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMainFunctionBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainFunctionContext mainFunction() {
		MainFunctionContext _localctx = new MainFunctionContext(Context, State);
		EnterRule(_localctx, 4, RULE_mainFunction);
		try {
			_localctx = new MainFunctionBlockContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(INTEGER);
			State = 66;
			Match(MAIN);
			State = 67;
			Match(LP);
			State = 68;
			Match(RP);
			State = 69;
			rblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
	 
		public FunctionContext() { }
		public virtual void CopyFrom(FunctionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class FnWithReturnContext : FunctionContext {
		public IToken TYPE;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(LangCParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LP() { return GetToken(LangCParser.LP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RP() { return GetToken(LangCParser.RP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RblockContext rblock() {
			return GetRuleContext<RblockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(LangCParser.INTEGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE() { return GetToken(LangCParser.DOUBLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEAN() { return GetToken(LangCParser.BOOLEAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(LangCParser.STRING, 0); }
		public FnWithReturnContext(FunctionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterFnWithReturn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitFnWithReturn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFnWithReturn(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FnWithoutReturnContext : FunctionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOID() { return GetToken(LangCParser.VOID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(LangCParser.VAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LP() { return GetToken(LangCParser.LP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RP() { return GetToken(LangCParser.RP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RblockContext rblock() {
			return GetRuleContext<RblockContext>(0);
		}
		public FnWithoutReturnContext(FunctionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterFnWithoutReturn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitFnWithoutReturn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFnWithoutReturn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			State = 85;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INTEGER:
			case DOUBLE:
			case BOOLEAN:
			case STRING:
				_localctx = new FnWithReturnContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				((FnWithReturnContext)_localctx).TYPE = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1006632960L) != 0)) ) {
					((FnWithReturnContext)_localctx).TYPE = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 72;
				Match(VAR);
				State = 73;
				Match(LP);
				State = 74;
				@params();
				State = 75;
				Match(RP);
				State = 76;
				rblock();
				}
				break;
			case VOID:
				_localctx = new FnWithoutReturnContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				Match(VOID);
				State = 79;
				Match(VAR);
				State = 80;
				Match(LP);
				State = 81;
				@params();
				State = 82;
				Match(RP);
				State = 83;
				rblock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtribContext atrib() {
			return GetRuleContext<AtribContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOL() { return GetToken(LangCParser.EOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InputContext input() {
			return GetRuleContext<InputContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputContext output() {
			return GetRuleContext<OutputContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ControlflowContext controlflow() {
			return GetRuleContext<ControlflowContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopContext loop() {
			return GetRuleContext<LoopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CallFunctionContext callFunction() {
			return GetRuleContext<CallFunctionContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILangCListener typedListener = listener as ILangCListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILangCVisitor<TResult> typedVisitor = visitor as ILangCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 8, RULE_line);
		try {
			State = 102;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				atrib();
				State = 88;
				Match(EOL);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90;
				input();
				State = 91;
				Match(EOL);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 93;
				output();
				State = 94;
				Match(EOL);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 96;
				controlflow();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 97;
				loop();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 98;
				function();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 99;
				callFunction();
				State = 100;
				Match(EOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
